--- a/Desktop/startbootstrap-clean-blog-gh-pages/css/clean-blog.css
+++ b/Desktop/startbootstrap-clean-blog-gh-pages/css/clean-blog.css
@@ -1,7 +1,7 @@
 body {
   font-size: 20px;
-  color: #212529;
   font-family: 'Lora', 'Times New Roman', serif;
+  background-color: #fff;
 }
 
 p {
@@ -81,13 +81,13 @@ img::-moz-selection {
 #mainNav {
   position: absolute;
   border-bottom: 1px solid #e9ecef;
-  background-color: blue;
+  background-color: #630620;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 #mainNav .navbar-brand {
   font-weight: 800;
-  color: yellow;
+  color: white;
 }
 
 #mainNav .navbar-toggler {
@@ -95,7 +95,7 @@ img::-moz-selection {
   font-weight: 800;
   padding: 13px;
   text-transform: uppercase;
-  color: #343a40;
+  color: white;
 }
 
 #mainNav .navbar-nav > li.nav-item > a {
@@ -112,17 +112,17 @@ img::-moz-selection {
   }
   #mainNav .navbar-brand {
     padding: 10px 20px;
-    color: #fff;
+    color: white;
   }
   #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-    color: rgba(255, 255, 255, 0.8);
+    color: white(255, 255, 255, 0.8);
   }
   #mainNav .navbar-nav > li.nav-item > a {
     padding: 10px 20px;
-    color: #fff;
+    color: white;
   }
   #mainNav .navbar-nav > li.nav-item > a:focus, #mainNav .navbar-nav > li.nav-item > a:hover {
-    color: rgba(255, 255, 255, 0.8);
+    color: white(255, 255, 255, 0.8);
   }
 }
 
@@ -291,6 +291,7 @@ header.masthead .post-heading .meta a {
 .post-preview > a > .post-subtitle {
   font-weight: 300;
   margin: 0 0 10px;
+  color: white;
 }
 
 .post-preview > .post-meta {
