--- a/Desktop/startbootstrap-clean-blog-gh-pages/css/clean-blog.css
+++ b/Desktop/startbootstrap-clean-blog-gh-pages/css/clean-blog.css
@@ -33,7 +33,9 @@ a {
 a:focus, a:hover {
   color: #0085A1;
 }
-
+button {
+  text-align: center;
+}
 blockquote {
   font-style: italic;
   color: #868e96;
