--- a/Desktop/startbootstrap-clean-blog-gh-pages/css/clean-blog.css
+++ b/Desktop/startbootstrap-clean-blog-gh-pages/css/clean-blog.css
@@ -17,12 +17,15 @@ h1,
 h2,
 h3,
 h4,
-h5,
 h6 {
   font-weight: 800;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+h5{
+  font-weight: 800;
+  font-family: Arial
 
+}
 a {
   color: #212529;
   -webkit-transition: all 0.2s;
